added header styles

--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 Not Found</title>
+    <!-- font link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Victor+Mono:wght@100;200;300;400;500;600;700&display=swap"rel="stylesheet">
+    <!-- font link -->
+    <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
     <header>
         <h5>404 NOT FOUND</h5>
@@ -12,15 +20,20 @@
             <div class="header-img">
                 <img src="404-not-found-master/Scarecrow.png" alt="">
             </div>
-            <div class="header-title">
-                <h1>I have bad news for you</h1>
-                <p>The page yor are looking for might be removed or is temporarily unavailable</p>
+            <div class="header-content">
+                <h1 class="header-title">I have bad news <br> for you</h1>
+                <p class="header-paragrapg">The page yor are looking <br> for might be removed or is <br> temporarily
+                    unavailable</p>
                 <button class="header-btn">BACK TO HOMEPAGE</button>
             </div>
+        </div>
+        <div class="create">
+            <p class="create-paragraph">Created By Taahia Tahsin</p>
         </div>
     </header>
     <main>
 
     </main>
 </body>
+
 </html>
