--- a/index.html
+++ b/index.html
@@ -21,14 +21,17 @@
                 <img src="404-not-found-master/Scarecrow.png" alt="">
             </div>
             <div class="header-content">
-                <h1 class="header-title">I have bad news <br> for you</h1>
+                <h1 class="header-title">I have bad news <br class="hide"> for you</h1>
                 <p class="header-paragrapg">The page yor are looking <br> for might be removed or is <br> temporarily
                     unavailable</p>
-                <button class="header-btn">BACK TO HOMEPAGE</button>
+                <div class="button">
+                    <button class="header-btn">BACK TO HOMEPAGE</button>
+                </div>
+                
             </div>
         </div>
         <div class="create">
-            <p class="create-paragraph">Created By Taahia Tahsin</p>
+            <p class="create-paragraph">Created By Taahia23 - devChallenges.io</p>
         </div>
     </header>
     <main>
