--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="header-content">
                 <h1 class="header-title">I have bad news <br class="hide"> for you</h1>
-                <p class="header-paragrapg">The page yor are looking <br> for might be removed or is <br> temporarily
+                <p class="header-paragrapg">The page you are looking <br> for might be removed or is <br> temporarily
                     unavailable</p>
                 <div class="button">
                     <button class="header-btn">BACK TO HOMEPAGE</button>
